syntax = "proto2";

message Group {
  oneof OneOf {
    group Value = 1
  }
}